@@ -26,6 +26,7 @@ v2.6.25
 * Report NETDEV_TX_BUSY when klips is overloaded with requests [David]
 * Fix usage of KLIPS_IP_SELECT_IDENT to prevent kernel trace/warnings [David]
 * Auth corruption due to unprotected data in sha1 (work_space) [Shinichi Furuso]
+* Correct locking for SA tables in pfkey interface [Shinichi Furuso/David]
 
 v2.6.24
 * Give clear warning about missing defaultroute [Tuomo]
